--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,7 +15,7 @@ services:
       - internal
     labels:
        - "traefik.enable=true"
-       - "traefik.http.routers.backend-router.rule=Host(localhost)""
+       - "traefik.http.routers.backend-router.rule=Host(localhost)"
        - "traefik.http.services.backend-service.loadbalancer.server.port=8000"
 
   db:
@@ -23,9 +23,9 @@ services:
     container_name: postgres
     restart: always
     environment:
-      POSTGRES_USER: dgh_user
-      POSTGRES_PASSWORD: dgh_pass
-      POSTGRES_DB: dgh_feedback
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: DGH
     volumes:
       - pgdata:/var/lib/postgresql/data
     networks:
