--- a/traefik/dynamic_conf.yml
+++ b/traefik/dynamic_conf.yml
@@ -1,7 +1,7 @@
 http:
   routers:
     backend-router:
-      rule: "Host(localhost)"
+      rule: Host(`localhost`)
       service: backend-service
       entryPoints:
         - web
