--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -6,3 +6,6 @@ passlib>=1.7.4
 bcrypt>=4.0.1
 python-multipart>=0.0.6
 twilio>=8.5.0
+psycopg2-binary>=2.9.9
+python-dotenv>=1.0.0
+aiohttp>=3.9.0  
