--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -9,6 +9,7 @@
     "dev": "concurrently \"npm run frontend\" \"npm run backend\"",
     "build": "vite build",
     "build:dev": "vite build --mode development",
+    "postinstall": "vite build"
     "lint": "eslint .",
     "preview": "vite preview"
   },
