--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,10 +1,12 @@
 [build]
   base = "Frontend"
   publish = "dist"
-  command = "npm ci && npm run build"  # Use npm ci for clean install
+  command = "corepack enable && pnpm install && pnpm run build"
 
 [context.production.environment]
   NODE_VERSION = "18" 
+[build.environment]
+  NPM_FLAGS = "--legacy-peer-deps"
 [[redirects]]
   from = "/*"
   to = "/index.html"
