--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,7 +1,7 @@
 [build]
   base = "Frontend"
   publish = "dist"
-  command = "corepack enable && pnpm install && pnpm run build"
+  command = "cd Frontend && npm install && npm run build"
 
 [context.production.environment]
   NODE_VERSION = "18" 
