--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -63,8 +63,9 @@
     "twilio": "^5.8.0",
     "vaul": "^0.9.3",
     "zod": "^3.23.8",
-    "axios": "^1.6.2"
-    
+    "axios": "^1.6.2",
+    "vite": "^5.4.1",
+    "@vitejs/plugin-react-swc": "^3.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
@@ -72,7 +73,6 @@
     "@types/node": "^22.5.5",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.5.0",
     "autoprefixer": "^10.4.20",
     "concurrently": "^9.2.0",
     "eslint": "^9.9.0",
@@ -84,6 +84,6 @@
     "tailwindcss": "^3.4.11",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^5.4.1"
+    
   }
 }
