--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,9 +1,8 @@
 [build]
   publish = "Frontend/dist"
-  command = "pnpm install && npm run build"
+  command = "npm install --include=dev && npm run build"
 
 [build.environment]
-  PNPM_ENABLE_FROZEN_LOCKFILE = "false"
   NPM_FLAGS = "--no-corepack"
 
 [context.production.environment]
