--- a/Frontend/netlify.toml
+++ b/Frontend/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  publish = "Frontend/dist"
+  publish = "dist"
   command = "npm install --include=dev && npm run build"
 
 [build.environment]
